# core

./: .gitignore  Cargo.toml  README.md  x86_64-blog_os.json
common/: Cargo.toml
common/src/: lib.rs  vga_buffer.rs  volatile.rs
docs/: index.html  script.js  styles.css
kernel/: Cargo.toml  README.md
kernel/src/: ai.rs  arvr.rs  bios.rs  bluetooth.rs  camera.rs  config.rs  device.rs  fs.rs  haptics.rs  ipc.rs  logger.rs  main.rs  marketplace.rs  monitor.rs  network.rs  policy.rs  power.rs  robotics.rs  scheduler.rs  security.rs  shell.rs  telemetry.rs  update.rs  user.rs  virtualization.rs  voice.rs
userland/shell/src/: main.rs
