[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.11.10"
common = { path = "../common" }

[lib]
name = "kernel"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[package.metadata.bootimage]
# This is the default for most blog_os-style kernels
default-target = "x86_64-unknown-none"